challenge/unpackaged/objects/Product_Image__c.object
<CustomObject>
    <fields>
        <fullName>DummyProduct__c</fullName>
        <label>Dummy Product</label>
        <referenceTo>DummyProduct__c</referenceTo>
        <relationshipLabel>Product Images</relationshipLabel>
        <relationshipName>ProductImages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Product Image</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>